k8s/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: waddleai
  namespace: waddleai
spec:
  parentRefs:
    - name: shared
      namespace: gateway
      sectionName: https
  hostnames:
    - "waddleai.penguintech.cloud"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /healthz
      backendRefs:
        - name: waddleai-mgmt
          port: 8001
    - matches:
        - path:
            type: PathPrefix
            value: /readyz
      backendRefs:
        - name: waddleai-mgmt
          port: 8001
    - matches:
        - path:
            type: PathPrefix
            value: /livez
      backendRefs:
        - name: waddleai-mgmt
          port: 8001
    - matches:
        - path:
            type: PathPrefix
            value: /metrics
      backendRefs:
        - name: waddleai-mgmt
          port: 8001
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: waddleai-mgmt
          port: 8001
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: waddleai-webui
          port: 80
